deploy/prod/payment-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-api
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - payment-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: payment-api
        image: fcavarzare/projeto-reserva:payment-api-latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "50m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-api-service
  namespace: prod
spec:
  selector:
    app: payment-api
  ports:
  - port: 80
    targetPort: 8080
